2008-07-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs,
	  Parser/DomParser.cs, Parser/mcs/dom.cs: Worked on completion.

2008-07-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs: Worked
	  on text editor completion.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Parser/Parser.cs: fixed Bug 405930 - FoldingRegions in compilation
	  units are all folded by default.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Gui/CSharpTextEditorCompletion.cs: Worked on
	  completion.

2008-06-25  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.

2008-06-25  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs: Worked on
	  nrefactory resolver.

2008-06-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/CSharpTextEditorCompletion.cs, Parser/DomParser.cs,
	  Parser/Resolver.cs, Parser/CSharpExpressionFinder.cs, Makefile.am:
	  Worked on code completion 

2008-06-23  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fix preprocessor directive
	  completion. Short out completion when indent engine says inside
	  string or comment.
	* FormattingStrategy/CSharpIndentEngine.cs: Add methods to check if
	  inside preprocessor directive or comment/string.

2008-06-23  Michael Hutchinson <mhutchinson@novell.com> 

	* FormattingStrategy/CSharpIndentEngineStack.cs,
	  FormattingStrategy/CSharpIndentEngine.cs: Capture keywords for
	  proprocessor directives. Pop #region/#endregion directives back
	  out.

2008-06-23  Mike Krüger <mkrueger@novell.com> 
