@@ -105,8 +105,8 @@
 	</Extension>
 
 	<Extension path = "/MonoDevelop/Ide/TextEditorExtensions">
-		<Class class = "CSharpBinding.CSharpTextEditorExtension" />
-<!-- <Class class = "MonoDevelop.CSharpBinding.Gui.CSharpTextEditorCompletion" /> -->
+<!--		<Class class = "CSharpBinding.CSharpTextEditorExtension" /> -->
+		<Class class = "MonoDevelop.CSharpBinding.Gui.CSharpTextEditorCompletion" />
 	</Extension>
 	
 	<Extension path = "/MonoDevelop/ProjectModel/MD1SerializationMaps">
